# challenger

./: .gitignore  .lgtm.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  perft.sh
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml
benchmarks/: main.cpp  move_generation_benchmark.cpp  move_generation_benchmark.h  move_generation_benchmark.hpp  search_benchmark.cpp  search_benchmark.h  search_benchmark.hpp
perft/: main.cpp  move_generation_benchmark.cpp  move_generation_benchmark.h
profiling/: run_profile.sh  uci_commands.txt
src/: bitboard.cpp  bitboard.h  bitboard.hpp  bitmap.cpp  bitmap.h  common.cpp  common.h  common.hpp  evaluate.cpp  evaluate.h  evaluate.hpp  game_variables.h  game_variables.hpp  genmove.cpp  genmove.h  genmove.hpp  main.cpp  movestore.cpp  movestore.h  position.cpp  position.cpp.bak  position.h  position.hpp  search.cpp  search.h  search.hpp  slider_attacks.cpp  slider_attacks.h  slider_attacks.hpp  thread_safe_queue.hpp  uci.cpp  uci.h  uci.hpp  uci_command.cpp  uci_command.hpp  uci_command_queue.hpp  zobrist.cpp  zobrist.h  zobrist.hpp
test/: bitmapTest.cpp  checktest.cpp  commontest.cpp  evaluatetest.cpp  genmovetest.cpp  kingmovetest.cpp  knightmovestest.cpp  main.cpp  positiontest.cpp  searchtest.cpp  ucicommandtest.cpp  ucitest.cpp
